--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ import Footer from '../components/Footer.astro';
     <Features />
     <HowItWorks />
     <FAQ />
-    <ComparisonTable />
+    <!-- <ComparisonTable /> -->
     <WaitlistForm />
   </main>
   <Footer />
